[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_pkg_nsulliv3"
version = "0.0.1"
authors = [
  { name="Nicole Sullivan", email="sullitruck@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sullivannicole/example_pkg"
"Bug Tracker" = "https://github.com/sullivannicole/example_pkg/issues"